<resources>
    <string name="app_name">AgriTrack</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?\t</string>
    <string name="sign_up_now">Sign up now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agritrack">AGRITRACK</string>
    <string name="traceable_quality_trusted_safety">Traceable Quality, Trusted Safety</string>
    <string name="create_an_account">Create An Account</string>
    <string name="have_an_account_already">Have an account already?\t</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="region">Region</string>
    <string name="commodity_type">Commodity Type</string>
    <string name="submit">Submit</string>
    <string name="reload">Reload</string>
    <string name="product_category"><![CDATA[<Product Category>]]></string>
    <string name="product_name"><![CDATA[<Product Name>]]></string>
    <string name="scan_qr">Scan QR</string>
    <string name="add_product">Add Product</string>
    <string name="take_image">Take Image</string>
    <string name="browse_image">Browse Image</string>
    <string name="product_namee">Product Name</string>
    <string name="your_product_name">Your product name</string>
    <string name="your_product_origin">Your product origin</string>
    <string name="product_origin">Product Origin</string>
    <string name="product_category1">Product Category</string>
    <string name="your_product_category">Your product category</string>
    <string name="product_composition">Product Composition</string>
    <string name="your_product_composition">Your product composition</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="product_id">Product ID</string>
    <string name="search_product_with_id">Search product with ID</string>
    <string name="search">Search</string>
    <string name="select_the_category_of_product">Select the category of product</string>
    <string name="your_product_id">Your product ID</string>
    <string name="search_product">Search product</string>
    <string name="product_information">Product Information</string>
    <string name="logout">Logout</string>
    <string name="price_forecasting">Price Forecasting</string>
</resources>